# youbot_traj

youbot_driver/youbot/: YouBotManipulator.cpp
youbot_inv_kine/: CMakeLists.txt  clion  package.xml
youbot_inv_kine/src/: main.cpp
